--- a/Vacuum_Cleaner.ioc
+++ b/Vacuum_Cleaner.ioc
@@ -86,6 +86,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM5_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM5_IRQn
 NVIC.TimeBaseIP=TIM5
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=MOTOR2_ENCODERB
@@ -195,7 +197,7 @@ PC12.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=USER_LED
 PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
+PC13-ANTI_TAMP.PinState=GPIO_PIN_RESET
 PC13-ANTI_TAMP.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
