--- a/Vacuum_Cleaner.ioc
+++ b/Vacuum_Cleaner.ioc
@@ -59,13 +59,15 @@ Mcu.Pin38=PB8
 Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin40=VP_SYS_VS_tim5
+Mcu.Pin41=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=41
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=42
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=6.14.0
@@ -322,6 +324,10 @@ SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
 SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
 SH.S_TIM9_CH2.ConfNb=1
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 TIM2.IPParameters=Period
 TIM2.Period=65535
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -341,6 +347,8 @@ USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim5.Mode=TIM5
 VP_SYS_VS_tim5.Signal=SYS_VS_tim5
 board=custom
