--- a/Vacuum_Cleaner.ioc
+++ b/Vacuum_Cleaner.ioc
@@ -72,6 +72,7 @@ MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -92,7 +93,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=MOTOR2_ENCODER_IN1
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=PinState,GPIO_Label
 PA1.GPIO_Label=MOTOR2_ENCODER_VCC
 PA1.Locked=true
@@ -131,10 +132,11 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=IRHIT_L
 PA7.Locked=true
 PA7.Signal=GPIO_Input
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=MOTOR1_ENCODER_IN1
+PA8.GPIO_PuPd=GPIO_PULLDOWN
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=GPXTI8
 PA9.GPIOParameters=PinState,GPIO_Label
 PA9.GPIO_Label=MOTOR1_ENCODER_VCC
 PA9.Locked=true
@@ -262,7 +264,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -278,7 +280,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM9_Init-TIM9-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM9_Init-TIM9-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -311,6 +313,10 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
